# mailer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
scripts/: inject-release-pubkey.mjs
src/: App.tsx  ConfirmDialog.tsx  RichHtmlEditor.tsx  api.ts  sanitize.ts  styles.css  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
