[package]
name = "artois-mailer"
version = "0.1.0"
description = "Application de publipostage email avec modèles, Excel et SMTP."
authors = ["VP"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.30"
chrono = { version = "0.4", features = ["clock", "serde"] }
deunicode = "1"
handlebars = "6"
keyring = "3"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4", "serde"] }

